{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 137,
  "lineage": "fe9fcdb7-0890-45ae-0099-c8a4e0ca1726",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:loadbalancer/app/ex-ecs/0d089dc2889be067",
            "arn_suffix": "app/ex-ecs/0d089dc2889be067",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ex-ecs-1426613950.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:loadbalancer/app/ex-ecs/0d089dc2889be067",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ex-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cc266ffe4421249a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0473c37041039ce74"
              },
              {
                "subnet_id": "subnet-09644282b38a25df9"
              },
              {
                "subnet_id": "subnet-0a27d1075cb146e0a"
              }
            ],
            "subnets": [
              "subnet-0473c37041039ce74",
              "subnet-09644282b38a25df9",
              "subnet-0a27d1075cb146e0a"
            ],
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:listener/app/ex-ecs/0d089dc2889be067/3f62f64bd3afebb6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:targetgroup/tf-20240117091400478900000005/236d4b9da8d74f06",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:listener/app/ex-ecs/0d089dc2889be067/3f62f64bd3afebb6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:loadbalancer/app/ex-ecs/0d089dc2889be067",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:targetgroup/tf-20240117091400478900000005/236d4b9da8d74f06",
            "arn_suffix": "targetgroup/tf-20240117091400478900000005/236d4b9da8d74f06",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:871794273757:targetgroup/tf-20240117091400478900000005/236d4b9da8d74f06",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20240117091400478900000005",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group/sg-0cc266ffe4421249a",
            "description": "Security group for ex-ecs application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc266ffe4421249a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ex-ecs-20240117091400543500000006",
            "name_prefix": "ex-ecs-",
            "owner_id": "871794273757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group-rule/sgr-0b15dc34a52c33686",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b15dc34a52c33686",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc266ffe4421249a",
            "security_group_rule_id": "sgr-0b15dc34a52c33686",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group-rule/sgr-0aaa1605ccf22a803",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0aaa1605ccf22a803",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cc266ffe4421249a",
            "security_group_rule_id": "sgr-0aaa1605ccf22a803",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:network-acl/acl-036372e1959a5001a",
            "default_network_acl_id": "acl-036372e1959a5001a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-036372e1959a5001a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "871794273757",
            "subnet_ids": [
              "subnet-01e0c98c956068484",
              "subnet-0292acce6fb1e2ebf",
              "subnet-0473c37041039ce74",
              "subnet-09644282b38a25df9",
              "subnet-0a27d1075cb146e0a",
              "subnet-0a56d19ac422fa4c5"
            ],
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:route-table/rtb-0923216b03282c6bc",
            "default_route_table_id": "rtb-0923216b03282c6bc",
            "id": "rtb-0923216b03282c6bc",
            "owner_id": "871794273757",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:security-group/sg-072883fcd16994389",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-072883fcd16994389",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "871794273757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02759c768c14fae0a",
            "association_id": "eipassoc-0de514bb188a7a21d",
            "domain": "vpc",
            "id": "eipalloc-02759c768c14fae0a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-06b7e083af7bd5695",
            "private_dns": "ip-10-0-48-93.eu-west-1.compute.internal",
            "private_ip": "10.0.48.93",
            "public_dns": "ec2-54-216-168-67.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.168.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:internet-gateway/igw-0d4e24f590ce3b300",
            "id": "igw-0d4e24f590ce3b300",
            "owner_id": "871794273757",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02759c768c14fae0a",
            "association_id": "eipassoc-0de514bb188a7a21d",
            "connectivity_type": "public",
            "id": "nat-0308cc705778cbfb2",
            "network_interface_id": "eni-06b7e083af7bd5695",
            "private_ip": "10.0.48.93",
            "public_ip": "54.216.168.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0473c37041039ce74",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3ee10671f467efe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0308cc705778cbfb2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3ee10671f467efe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d4e24f590ce3b300",
            "id": "r-rtb-013a3e5fbdb9eff001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013a3e5fbdb9eff00",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:route-table/rtb-0f3ee10671f467efe",
            "id": "rtb-0f3ee10671f467efe",
            "owner_id": "871794273757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0308cc705778cbfb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:route-table/rtb-013a3e5fbdb9eff00",
            "id": "rtb-013a3e5fbdb9eff00",
            "owner_id": "871794273757",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4e24f590ce3b300",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024761feb490cc087",
            "route_table_id": "rtb-0f3ee10671f467efe",
            "subnet_id": "subnet-01e0c98c956068484"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecd6374c563027d1",
            "route_table_id": "rtb-0f3ee10671f467efe",
            "subnet_id": "subnet-0292acce6fb1e2ebf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9a9e4900d430bd8",
            "route_table_id": "rtb-0f3ee10671f467efe",
            "subnet_id": "subnet-0a56d19ac422fa4c5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba8ae4ac285a597",
            "route_table_id": "rtb-013a3e5fbdb9eff00",
            "subnet_id": "subnet-0473c37041039ce74"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018ff27af81a141bb",
            "route_table_id": "rtb-013a3e5fbdb9eff00",
            "subnet_id": "subnet-0a27d1075cb146e0a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bedf42cb32527b5",
            "route_table_id": "rtb-013a3e5fbdb9eff00",
            "subnet_id": "subnet-09644282b38a25df9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-01e0c98c956068484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e0c98c956068484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0292acce6fb1e2ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0292acce6fb1e2ebf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0a56d19ac422fa4c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a56d19ac422fa4c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0473c37041039ce74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0473c37041039ce74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-0a27d1075cb146e0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a27d1075cb146e0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:subnet/subnet-09644282b38a25df9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09644282b38a25df9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871794273757",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-06f44ffa2a1f1c6c9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:871794273757:vpc/vpc-06f44ffa2a1f1c6c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036372e1959a5001a",
            "default_route_table_id": "rtb-0923216b03282c6bc",
            "default_security_group_id": "sg-072883fcd16994389",
            "dhcp_options_id": "dopt-077953acc95cdec1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f44ffa2a1f1c6c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0923216b03282c6bc",
            "owner_id": "871794273757",
            "tags": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "ex-ecs",
              "Name": "ex-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}